--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "@uniswap/redux-multicall",
-  "version": "1.1.6",
+  "name": "smartswap-redux-multicall",
+  "version": "1.0.0",
   "description": "A React + Redux lib for fetching and caching chain state via the MultiCall contract",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "files": [
     "dist"
   ],
-  "repository": "https://github.com/Uniswap/redux-multicall",
+  "repository": "https://github.com/JRaghu842/smartswap-redux-multicall.git",
   "keywords": [
-    "uniswap",
     "ethereum"
   ],
   "module": "dist/redux-multicall.esm.js",
@@ -41,7 +40,6 @@
     "@types/jest": "^25.2.1",
     "@types/react": "^17.0.28",
     "@types/react-dom": "^17.0.14",
-    "@uniswap/v3-periphery": "^1.3.0",
     "dotenv": "^16.0.3",
     "eslint-plugin-prettier": "3.4.1",
     "ethers": "^5.4.7",
@@ -50,6 +48,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
     "semantic-release": "^19.0.5",
+    "smartswap-v3-periphery": "^1.0.2",
     "tsdx": "^0.14.1",
     "typechain": "^5.2.0"
   },
